--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set(WITH_SANITIZER False)
 set(ZLIBNG_ENABLE_TESTS False)
 set(ZLIB_ENABLE_TESTS False)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-# add_subdirectory(zlib-ng)
+add_subdirectory(zlib-ng)
 
 enable_language(C)
 enable_language(CXX)
@@ -24,8 +24,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(CAMKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O3 -target aarch64-linux-android")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -target aarch64-linux-android")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -pipe -integrated-as -mllvm -polly -mllvm -polly-vectorizer=stripmine -mllvm -polly-invariant-load-hoisting -mllvm -polly-run-inliner -mllvm -polly-run-dce -mllvm -polly-invariant-load-hoisting -flto=thin -mllvm -polly-run-inliner -mllvm -polly-run-dce -mllvm -polly-parallel -mllvm -polly-scheduling=dynamic -flto=thin -fno-emulated-tls -fwhole-program-vtables -fdata-sections -ffunction-sections -fmerge-all-constants -mllvm -polly-detect-keep-going -mllvm -polly-ast-use-context -march=armv8-a+simd -fvisibility=hidden -Wall -Wextra -fPIC -DPIC -ferror-limit=0 -Wno-return-type -Wno-unused-parameter -Wno-c++98-compat -Wno-c++98-compat-pedantic -DGLM_FORCE_INTRINSICS -target aarch64-linux-android -U_FORTIFY_SOURCE")
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -O3 -pipe -integrated-as -mllvm -polly -mllvm -polly-vectorizer=stripmine -mllvm -polly-invariant-load-hoisting -mllvm -polly-run-inliner -mllvm -polly-run-dce -mllvm -polly-invariant-load-hoisting -flto=thin -mllvm -polly-run-inliner -mllvm -polly-run-dce -mllvm -polly-parallel -mllvm -polly-scheduling=dynamic -flto=thin -fno-emulated-tls -fwhole-program-vtables -fdata-sections -ffunction-sections -fmerge-all-constants -mllvm -polly-detect-keep-going -mllvm -polly-ast-use-context -march=armv8-a+simd -fvisibility=hidden -Wall -Wextra -fPIC -DPIC -ferror-limit=0 -Wno-return-type -Wno-unused-parameter -Wno-c++98-compat -Wno-c++98-compat-pedantic -DGLM_FORCE_INTRINSICS -target aarch64-linux-android -U_FORTIFY_SOURCE")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lc -fuse-ld=lld -flto=thin -Wl,-plugin-opt=-emulated-tls=0 -lc++_static -lc++abi")
 set(CMAKE_ANDROID_LD "lld")
 
 file(GLOB_RECURSE SRC src/*)
