--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -18,3 +18,8 @@ jobs:
         run: |
           cd java
           nix develop --command ./gradlew build
+      - name: Upload lib
+        uses: actions/upload-artifact@v4
+        with:
+          name: M
+          path: ./
